# exajugo

./: ACOPF.jl  ACPF.jl  Project.toml  README.md  Run_extended_form.jl  SCACOPF.jl  readme.md  run_SCACOPF.jl
TX2000/: DailyLoadFea.xlsx  DailyLoadinFea.xlsx  GenAll.xlsx  GenAllmz.csv  GenNorAll.xlsx  GenNor_M10.xlsx  GenNor_MS15.xlsx  GenZero.csv  HourlyLoad.xlsx  HourlyLoadFea.xlsx  HourlyLoadinFea.xlsx  Load.CSV  case.CSV  case.con  case.inl  case.raw  case.rop  plant.csv
convert_m_file/: Create_ExaJuGo_files.m  RAW_ROP_4_update_MPC.m  README.md  extract_load_data.m  save2psse.m  save2psse_rop.m
hiop_interface/: .gitignore  README.md  compile.sh  exajugo_call.jl  hiop.cpp  hiop.jl  hiop_500bus.cpp  hiop_TSIGP.cpp  hiop_gp.cpp  load.sh  test_TSACOPF.jl  test_TSI500.jl  test_cases.jl
jl_hiop_pridec/: CMakeLists.txt  README.txt  config.sh  hiop.jl  jl_NlpPriDec.cpp  jl_NlpPriDec.hpp  jl_NlpPriDecDriver.cpp  jl_interface.cpp  jl_interface.hpp  load.sh
modules/: CompetitionInterface.jl  GoOptions.jl  GoUtils.jl  InstanceReader.jl  InstanceReaderMP.jl  InstanceReaderMPbus.jl  MPACOPF.jl  MPACOPFA.jl  MPACOPFStates.jl  MPACOPFbus.jl  MPACOPFbusStates.jl  SCACOPF.jl  SCACOPFReserves.jl  SCACOPFStates.jl  SCACOPFSubproblems.jl  SmoothApproximations.jl  SolutionEvaluator.jl  SolutionReader.jl  SolutionWriter.jl  SolutionWriterMP.jl  SolutionWriterMPbus.jl
tests/: ACOPF.jl  AllGen.py  AllGenRange.py  CTtest.jl  ContingencyNoCoupling.jl  Coupling.jl  GenCost2000.py  GenCost2000Day.py  GenCost2000bus.py  GenCostLMPOne.py  GenCostSingle.py  GenerateMyExe1tests.jl  Parser.jl  (+36 more)
(+31 files in other folders)
